--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "Twitch chat pop out",
+    "name": "StreamForce - CRM for Twitch streamers",
     "version": "1.0",
-    "description": "A simple Chrome extension to pop out Twitch chat",
-    "background": {
-      "scripts": [
-        "background.js"
-      ],
-      "persistent": false
-    },
+    "description": "Chatter Relationship Management for streamers",
     "permissions": [
     ],
     "icons_commented_out": {
@@ -21,18 +15,6 @@
       {
         "matches": [ "https://www.twitch.tv/popout/ykdojo/chat" ],
         "js": ["contentScript.js"]
-      },
-      {
-        "matches": [ "<all_urls>" ],
-        "js": ["hideEmailAddresses.js"]
-      },
-      {
-        "matches": [ "https://www.linkedin.com/feed/" ],
-        "js": ["hideLinkedInSuggestedPosts.js"]
-      },
-      {
-        "matches": [ "https://twitter.com/*" ],
-        "js": ["hideTwitterDMDrawer.js"]
       }
     ]
   }
